jandex & bump 1.51.3